# iaxolab-scope

./: .pre-commit-config.yaml  README.md  pyproject.toml
example/: acquisition.py  sequence.py
src/iaxolab_scope/: __init__.py  scope.py  waveform.py
tests/: test_scope.py
